Update Java, Jib, Gradle and Spring versions